k8s/green/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: springboot-app-green
  labels:
    app: springboot-app
    color: green

spec:
  replicas: 2

  selector:
    matchLabels:
      app: springboot-app
      color: green

  template:

    metadata:
      labels:
        app: springboot-app
        color: green

    spec:

      containers:

        - name: springboot-app

          image: bhaskarvanam/spring-boot:IMAGE_TAG

          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
