k8s/green/service.yml
apiVersion: v1
kind: Service

metadata:
  name: springboot-green-service

spec:

  type: NodePort

  selector:
    app: springboot-app
    color: green

  ports:

    - port: 8080
      targetPort: 8080
      nodePort: 30081
